# ga-block-cipher

./: CMakeLists.txt  README.md  main.cc
crypto/: feistel.h
src/: CMakeLists.txt  main.cc
src/algo/: damerau_levenshtein.cc  damerau_levenshtein.h
src/algo/ga/: dna.cc  dna.h
src/crypto/: feistel.h
src/crypto/mode/: ctr.h  ecb.h
src/util/: binops.h  log.h  random.cc  types.h
tests/: CMakeLists.txt
tests/crypto/: rc6.cc  rc6.h
tests/crypto/mode/: ctr.cc  ecb.cc
tests/util/: binops.cc
util/: log.h  random.cc  random.h  types.h
